data/derived/fa15/progs/unify/prog0928.ml.out
Characters 72-88:
  | h::t -> tenEx (x + 1) t @ ((helper x) * h);;
                              ^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
